--- a/RFP_Project/templates/dashboard.html
+++ b/RFP_Project/templates/dashboard.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% load widget_tweaks %}
 <!doctype html>
 <html lang="en">
 
@@ -11,18 +13,18 @@
         <link rel="shortcut icon" href="assets/images/favicon.ico">
 
 		<!-- DataTables -->
-        <link href="assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/libs/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css ' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/libs/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css' %}" rel="stylesheet" type="text/css" />
 		<!-- Responsive datatable examples -->
-        <link href="assets/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css' %}" rel="stylesheet" type="text/css" />
 		
         <!-- Bootstrap Css -->
-        <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
         <!-- Icons Css -->
-        <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
         <!-- App Css-->
-        <link href="assets/css/app.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/css/app.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/css/style.css' %}" rel="stylesheet" type="text/css" />
 
     </head>
 
@@ -50,7 +52,7 @@
 
                     <div class="d-flex pr-2">
 						<div class="dropdown d-inline-block">
-                            <span class="d-none d-xl-inline-block ml-1" key="t-henry">Welcome Henry</span>&nbsp;&nbsp;
+                            <span class="d-none d-xl-inline-block ml-1" key="t-henry">Welcome {{request.user.first_name}} </span>&nbsp;&nbsp;
                             <a class="" href="#">Logout</span></a>
                         </div>
                     </div>
@@ -92,7 +94,7 @@
                             </li>
 
                             <li>
-                                <a href="#" class="waves-effect">
+                                <a href="/categories" class="waves-effect">
                                     <i class="mdi mdi-weather-night"></i>
                                     <span>Categories</span>
                                 </a>
@@ -126,24 +128,29 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>     
-                        <!-- end page title -->
+                        </div> 
+                        <div class="row">
 
-                        <!-- end row -->
+                            
+                        </div>
 						
 						
 						<div class="row">
+                            {% block content %}
                             <div class="col-lg-12">
                                 <div class="card">
                                     <div class="card-body">
+                                        
                                         <div>
                                             Welcome to RFP System.
                                         </div>
+                                        
                                     </div>
                                 </div>
                             </div>
+                            {% endblock %}
                         </div>
-
+                        
 
                         
                         <!-- end row -->
